tc-add Solutions

--- a/jay/tc/css/style.css
+++ b/jay/tc/css/style.css
@@ -335,72 +335,8 @@ a:hover {
   }
 }
 
-.autoplay-progress {
-  position: absolute;
-  right: 16px;
-  bottom: 16px;
-  z-index: 10;
-  width: 48px;
-  height: 48px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-weight: bold;
-  color: var(--swiper-theme-color);
-}
-
-.autoplay-progress svg {
-  --progress: 0;
-  position: absolute;
-  left: 0;
-  top: 0px;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
-  stroke-width: 4px;
-  stroke: var(--swiper-theme-color);
-  fill: none;
-  stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
-  stroke-dasharray: 125.6;
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-}
-
 .img-box img {
   width: 100%;
-}
-
-a.go_top {
-  cursor: pointer;
-  position: fixed;
-  bottom: 50px;
-  right: 18px;
-  z-index: 15;
-  width: 60px;
-  color: #fff;
-  background-color: #c3c3c3;
-  opacity: 0;
-  font-size: 18px;
-  line-height: 60px;
-  text-align: center;
-  height: 60px;
-  display: block;
-  border-radius: 50%;
-  background-color: #46d7d1;
-}
-
-@media (max-width: 700px) {
-  a.go_top a.go_top {
-    width: 44px;
-    height: 44px;
-    line-height: 44px;
-  }
 }
 
 /*===== start ======*/
@@ -416,6 +352,10 @@ a.go_top {
   .block-box {
     padding: 20px;
   }
+}
+
+.top-line {
+  border-top: 1px solid #AFAFAF;
 }
 
 .flex-box {
@@ -544,62 +484,6 @@ a.go_top {
   }
 }
 
-.header-wrapper .language {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
-  position: relative;
-}
-
-.header-wrapper .language a {
-  font-size: 12px;
-  color: #fff;
-}
-
-.header-wrapper .language a.choosing {
-  line-height: 30px;
-  padding: 0 10px;
-}
-
-.header-wrapper .language a.choosing i {
-  pointer-events: none;
-}
-
-.header-wrapper .language a span {
-  padding: 0 10px;
-}
-
-.header-wrapper .language .language-list {
-  position: absolute;
-  right: 0;
-  top: 35px;
-  display: none;
-}
-
-.header-wrapper .language .language-list ul {
-  width: 85px;
-  background-color: #333333c4;
-  border-radius: 10px;
-}
-
-.header-wrapper .language .language-list ul li {
-  border-bottom: 1px solid #99999957;
-}
-
-.header-wrapper .language .language-list ul p {
-  text-align: center;
-}
-
-.header-wrapper .language .language-list ul p a {
-  display: inline-block;
-  padding: 10px;
-}
-
-.header-wrapper .language .language-list ul p a:hover {
-  color: #11948A;
-}
-
 @media (max-width: 900px) {
   .header-wrapper .block-box {
     padding: 12px 12px 12px 6px;
@@ -636,6 +520,14 @@ a.go_top {
   padding: 15px 0;
   font-weight: bold;
   font-size: 26px;
+}
+
+.main-wrapper .section-wrap .main-title h4 {
+  padding: 15px 0;
+  font-weight: bold;
+  font-size: 16px;
+  padding-bottom: 20px;
+  line-height: 1.8;
 }
 
 @media (max-width: 760px) {
@@ -691,6 +583,123 @@ a.go_top {
 
 .main-wrapper .section-wrap .text-right {
   text-align: right;
+}
+
+.main-wrapper .inside-3d-wrap {
+  background-color: #F5F7F8;
+  position: relative;
+}
+
+.main-wrapper .inside-3d-wrap .btn-return {
+  position: absolute;
+  left: 0;
+  top: 15px;
+  z-index: 5;
+}
+
+.main-wrapper .inside-3d-wrap .btn-return a {
+  width: 120px;
+  height: 150px;
+  display: block;
+  background-image: url(../images/btn_return.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.main-wrapper .inside-3d-wrap .btn-return a span {
+  font-size: 15px;
+  width: 75%;
+  position: absolute;
+  bottom: 18%;
+  text-align: center;
+  color: #fff;
+}
+
+.main-wrapper .inside-3d-wrap .btn-return a span i {
+  padding-right: 3px;
+}
+
+.main-wrapper .inside-3d-wrap .btn-return a:hover {
+  opacity: .9;
+}
+
+@media (max-width: 700px) {
+  .main-wrapper .inside-3d-wrap .btn-return a {
+    width: 70px;
+    height: 88px;
+  }
+  .main-wrapper .inside-3d-wrap .btn-return a span {
+    font-size: 12px;
+  }
+}
+
+.main-wrapper .inside-3d-wrap .img__3d {
+  width: 100%;
+  position: relative;
+}
+
+.main-wrapper .inside-3d-wrap .img__3d .the_3dtitle_box {
+  position: absolute;
+  z-index: 3;
+}
+
+.main-wrapper .inside-3d-wrap .img__3d .the_3dtitle_box .c_line {
+  position: relative;
+  padding-bottom: 30px;
+}
+
+.main-wrapper .inside-3d-wrap .img__3d .the_3dtitle_box .c_line a {
+  background-color: #fff;
+  display: block;
+  border-radius: 18px;
+  padding: 12px 20px;
+  min-width: 180px;
+  color: #03BAEB;
+  text-align: center;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+}
+
+.main-wrapper .inside-3d-wrap .img__3d .the_3dtitle_box .c_line a:hover {
+  background-color: #edfbff;
+}
+
+.main-wrapper .inside-3d-wrap .img__3d .the_3dtitle_box .c_line a.Selected {
+  color: #fff;
+  background-color: #03BAEB;
+}
+
+.main-wrapper .inside-3d-wrap .img__3d .the_3dtitle_box .c_line::after {
+  content: "";
+  position: absolute;
+  left: calc(50% - 1px);
+  height: 30px;
+  width: 2px;
+  display: block;
+  background-color: #fff;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+}
+
+.main-wrapper .inside-3d-wrap .img__3d .the_3dtitle_box .c_line::before {
+  content: "";
+  position: absolute;
+  left: calc(50% - 10px);
+  bottom: -17px;
+  width: 16px;
+  height: 16px;
+  display: block;
+  border-radius: 50%;
+  background-color: #F9C300;
+  border: 2px solid #fff;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+}
+
+.main-wrapper .inside-3d-wrap .img__3d img {
+  width: 100%;
 }
 
 .main-wrapper .bg-index {
@@ -752,24 +761,6 @@ a.go_top {
   .main-wrapper .submenu-wrap ul.submenu li p a {
     padding: 10px 20px;
     min-width: 80px;
-  }
-}
-
-.main-wrapper .bg-datatech {
-  padding: 40px 0 20px 0;
-}
-
-.main-wrapper .bg-datatech .block-box {
-  position: relative;
-  z-index: 5;
-}
-
-@media (max-width: 760px) {
-  .main-wrapper .bg-datatech {
-    padding: 20px 0 0 0;
-    background-repeat: no-repeat;
-    background-attachment: initial;
-    background-size: cover;
   }
 }
 
@@ -1095,6 +1086,68 @@ a.go_top {
             flex: 100%;
   }
   .main-wrapper .block-both2 .abox .img-box {
+    padding: 0;
+  }
+}
+
+.main-wrapper .block-both3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.main-wrapper .block-both3 .abox {
+  -webkit-box-flex: 40%;
+      -ms-flex: 40%;
+          flex: 40%;
+  padding: 20px;
+}
+
+.main-wrapper .block-both3 .abox .main-title h3 {
+  font-size: 18px;
+}
+
+.main-wrapper .block-both3 .abox .text-contents ul.list-ol-d {
+  padding-bottom: 15px;
+}
+
+.main-wrapper .block-both3 .abox .text-contents ul.list-ol-d li {
+  padding-bottom: 5px;
+}
+
+.main-wrapper .block-both3 .abox .text-contents ul.list-ol-d li p {
+  line-height: initial;
+}
+
+.main-wrapper .block-both3 .abox .img-box {
+  padding: 0;
+  margin: 0 auto;
+}
+
+.main-wrapper .block-both3 .abox .img-box img {
+  width: 100%;
+}
+
+.main-wrapper .block-both3 .abox:last-child {
+  -webkit-box-flex: 60%;
+      -ms-flex: 60%;
+          flex: 60%;
+  padding-left: 10%;
+  margin-left: auto;
+}
+
+@media (max-width: 760px) {
+  .main-wrapper .block-both3 .abox {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+  }
+  .main-wrapper .block-both3 .abox .img-box {
     padding: 0;
   }
 }
@@ -1533,6 +1586,10 @@ a.go_top {
   padding-bottom: 12px;
 }
 
+.footer-wrapper ul.contact-list li p {
+  line-height: 1.5;
+}
+
 .footer-wrapper ul.contact-list li p span {
   padding-left: 25px;
   position: relative;
@@ -1680,9 +1737,5 @@ a.go_top {
 
 .c_green {
   color: #11948A;
-}
-
-.abox {
-  position: relative;
 }
 /*# sourceMappingURL=style.css.map */
