--- a/jay/tc/css/style.css
+++ b/jay/tc/css/style.css
@@ -1064,9 +1064,23 @@ a:hover {
   }
   .main-wrapper .title-banner-wrap .block-box .main-title h3 {
     font-size: 40px;
+    margin-bottom: 15px;
   }
   .main-wrapper .title-banner-wrap .block-box .main-title p {
     font-size: 16px;
+  }
+}
+
+@media (max-width: 499px) {
+  .main-wrapper .title-banner-wrap .block-box {
+    min-height: 150px;
+  }
+  .main-wrapper .title-banner-wrap .block-box .main-title h3 {
+    font-size: 30px;
+    margin-bottom: 0;
+  }
+  .main-wrapper .title-banner-wrap .block-box .main-title p {
+    font-size: 14px;
   }
 }
 
@@ -1540,6 +1554,86 @@ a:hover {
   .main-wrapper .contact-form .form-contents .field .confirm li p {
     font-size: 12px;
   }
+}
+
+.main-wrapper .case-wrap .block-box {
+  padding: 0;
+  max-width: 100%;
+  position: relative;
+  height: 808px;
+  background: url(../images/bg_map.png) top center no-repeat #F2F2F2;
+}
+
+.main-wrapper .case-wrap .block-box .country_xy {
+  position: absolute;
+  text-align: center;
+  cursor: pointer;
+}
+
+.main-wrapper .case-wrap .block-box .country_xy .icon {
+  width: 40px;
+  height: 52px;
+  margin: 0 auto;
+  display: block;
+  background-image: url(../images/icon_location_blue.png);
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: 70%;
+}
+
+.main-wrapper .case-wrap .block-box .country_xy .Selected {
+  background-image: url(../images/icon_location_red.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.main-wrapper .case-wrap .block-box .country_xy p {
+  padding-top: 10px;
+  display: block;
+}
+
+.main-wrapper .case-wrap .block-box .case-list-box {
+  padding: 10px;
+  width: 45%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  background-color: #00000010;
+}
+
+.main-wrapper .case-wrap .block-box .case-list-box ul.logos {
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.main-wrapper .case-wrap .block-box .case-list-box ul.logos li {
+  padding: 7.5px;
+}
+
+.main-wrapper .case-wrap .block-box .case-list-box ul.logos li .img-logo {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 150px;
+  height: 150px;
+  display: block;
+  border-radius: 20px;
+  background-color: #fff;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+  overflow: hidden;
+}
+
+.main-wrapper .case-wrap .block-box .case-list-box ul.logos li .img-logo img {
+  width: 100%;
+  height: 100%;
 }
 
 .footer-wrapper {
