--- a/jay/tc/css/style.scss
+++ b/jay/tc/css/style.scss
@@ -977,9 +977,24 @@ a:hover {
         .main-title{
           h3{
             font-size: 40px;
+            margin-bottom: 15px;
           }
           p{
             font-size: 16px;
+          }
+        }
+      }
+    }
+    @media (max-width: 499px) {
+      .block-box{
+        min-height: 150px;
+        .main-title{
+          h3{
+            font-size: 30px;
+            margin-bottom: 0;
+          }
+          p{
+            font-size: 14px;
           }
         }
       }
@@ -1349,6 +1364,70 @@ a:hover {
             padding: 0;
             li p{
               font-size: 12px;
+            }
+          }
+        }
+      }
+    }
+  }
+  .case-wrap{
+    .block-box{
+      padding: 0;
+      max-width: 100%;
+      position: relative;
+      height: 808px;
+      background: url(../images/bg_map.png) top center no-repeat #F2F2F2;
+      .country_xy{
+        position: absolute;
+        text-align: center;
+        cursor: pointer;
+        .icon{
+          width: 40px;
+          height: 52px;
+          margin: 0 auto;
+          display: block;
+          background-image: url(../images/icon_location_blue.png);
+          background-position: center bottom;
+          background-repeat: no-repeat;
+          background-size: 70%;
+        }
+        .Selected{
+          background-image: url(../images/icon_location_red.png);
+          @include img-default;
+        }
+        p{
+          padding-top: 10px;
+          display: block;
+        }
+      }
+      .case-list-box{
+        padding: 10px;
+        width: 45%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1;
+        background-color: #00000010;
+        ul.logos{
+          padding: 10px;
+          display: flex;
+          flex-wrap: wrap;
+          li{
+            padding: 7.5px;
+            .img-logo{
+              flex: 1;
+              width: 150px;
+              height: 150px;
+              display: block;
+              border-radius: 20px;
+              background-color: #fff;
+              @include has-box-shadow;
+              overflow: hidden;
+              img{
+                width: 100%;
+                height: 100%;
+              }
             }
           }
         }
