--- a/jay/tc/css/style.scss
+++ b/jay/tc/css/style.scss
@@ -630,6 +630,158 @@ a:hover {
       text-align: right;
     }
   }
+  .home-3d-wrap{
+    position: relative;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    .block-box{
+      position: initial;
+      max-width: 1440px;
+    }
+    .maintitle{
+      left: 5%;
+      top: 5%;
+      z-index: 5;
+      position: absolute;
+      background-color: #00AFDE;
+      h1{
+        color: #fff;
+        font-size: 26px;
+        font-weight: bold;
+        padding-bottom: 10px;
+      }
+      h2{
+        color: #fff;
+        font-size: 18px;
+        font-weight: bold;
+      }
+      .text{
+        position: relative;
+        padding: 30px 40px 30px 55px;
+        &::after{
+          content: "";
+          position: absolute;
+          left: 25px;
+          top: 22px;
+          width: 8px;
+          height: 125px;
+          display: block;
+          background-color: #F9C300;
+        }
+      }
+      
+    }
+    .img__3d{
+      width: 100%;
+      position: relative;
+      .the_3dtitle_box{
+        position: absolute;
+        z-index: 3;
+        background-color: #fff;
+        border-radius: 18px; 
+        @include has-box-shadow;
+        .c_line{
+          cursor: pointer;
+          position: relative;
+          .arr{
+            padding: 10px;
+            cursor: pointer;
+            position: absolute;
+            top: 2px;
+            right: 5px;
+            color: #03BAEB;
+            z-index: 1;
+            opacity: .5;
+            pointer-events: none;
+          }
+          &:hover{
+            .arr{
+              opacity: 1;
+            }
+          }
+          
+          a{
+            display: block;
+            padding: 12px 20px;
+            min-width: 180px;
+            color: #03BAEB;
+            border-radius: 18px;
+            &:hover{
+              background-color: #edfbff;
+            }
+            &.Selected{
+              color: #fff;
+              background-color: #03BAEB;
+            }
+          }
+
+          &::after{
+            content: "";
+            position: absolute;
+            top: 20px;
+            right: -30px;
+            height: 1.5px;
+            width: 30px;
+            display: block;
+            background-color: #fff;
+            @include has-box-shadow;
+          }
+          &::before{
+            content: "";
+            position: absolute;
+            right: -48px;
+            top:12px;
+            width: 16px;
+            height: 16px;
+            display: block;
+            border-radius: 50%;
+            background-color: #F9C300;
+            border: 2px solid #fff;
+            @include has-box-shadow;
+          }
+        }
+        .left_line{
+          &::after{
+            content: "";
+            right: initial;
+            left: -30px;
+          }
+          &::before{
+            right: initial;
+            left: -48px;
+            top:12px;
+          }
+        }
+        .show-text{
+          border-top: 1px solid #CCEBF9;
+          max-width: 320px;
+          padding:15px 25px;
+          max-height: 50vh;
+          overflow-y: auto;
+          h3{
+            font-size: 13px;
+          }
+          .list-ol-d{
+            font-size: 16px;
+            li{
+              padding-bottom: 5px;
+              p{
+                font-size: 12px;
+                line-height: 1.5;
+              }
+            }
+          }
+        }
+      }
+      img{
+        width: 100%;
+      }
+    }
+  }
   .inside-3d-wrap{
     background-color: #F5F7F8;
     position: relative;
@@ -702,7 +854,7 @@ a:hover {
             position: absolute;
             left: calc(50% - 1px);
             height: 30px;
-            width: 2px;
+            width: 1.5px;
             display: block;
             background-color: #fff;
             @include has-box-shadow;
@@ -711,7 +863,7 @@ a:hover {
             content: "";
             position: absolute;
             left: calc(50% - 10px);
-            bottom: -17px;
+            bottom: -19px;
             width: 16px;
             height: 16px;
             display: block;
@@ -1401,16 +1553,23 @@ a:hover {
         }
       }
       .case-list-box{
-        padding: 10px;
-        width: 45%;
+        width: 55%;
+        max-width: 555px;
         height: 100%;
+        overflow-y: auto;
         position: absolute;
         top: 0;
         right: 0;
         z-index: 1;
         background-color: #00000010;
+        .main-title{
+          position: sticky;
+          top: 0;
+          background-color: #e3e3e3;
+          padding:5px 10px;
+        }
         ul.logos{
-          padding: 10px;
+          padding: 20px;
           display: flex;
           flex-wrap: wrap;
           li{
