--- a/jay/tc/css/style.css
+++ b/jay/tc/css/style.css
@@ -1836,6 +1836,7 @@ a:hover {
 
 .main-wrapper .mrs-wrap .l-box {
   width: 35%;
+  margin: 40px 0;
   min-height: 100vh;
   background-color: #fff;
   -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
@@ -2010,16 +2011,21 @@ a:hover {
   background-color: #ffffffe6;
 }
 
-.main-wrapper .mrs-wrap .r-box .no-click {
-  cursor: none;
+.main-wrapper .mrs-wrap .r-box .btns a.no-click {
+  cursor: no-drop;
+  color: #8e8e8e;
+  background-color: #ffffff8f;
 }
 
-.main-wrapper .mrs-wrap .r-box .no-click a {
-  color: #555;
+.main-wrapper .mrs-wrap .r-box .btns a.no-click:hover {
+  background-color: #ffffff8f;
 }
 
 .main-wrapper .mrs-wrap .r-box .a_info__card {
   width: 100%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 105px;
 }
 
 .main-wrapper .mrs-wrap .r-box .a_info__card .abox {
